src/test/fail/function_redeclaration.ly
###
SyntaxError: f has already been declared.
Where: File "test/fail/function_redeclaration.ly" at line 6
###

define f() {} define f() {}
